part4/ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - image: melxi/pingpong
        name: pingpong
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: "250m"
            memory: "500Mi"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 3002
